Criação da página seguros e ajuste do css que cria os ícones

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <a class="link" href="./bicicletas.html">escolha um modelo</a>
         <div class="tecnologia-vantagens">
           <div>
-            <h3 class="font-1-m cor-00" id="vantagem-01">Motor Elétrico</h3>
+            <h3 class="font-1-m cor-00 vantagem" id="reparo">Motor Elétrico</h3>
             <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
           </div>
           <div>
-            <h3 class="font-1-m cor-00" id="vantagem-02">Rastreador</h3>
+            <h3 class="font-1-m cor-00 vantagem" id="rastreador">Rastreador</h3>
             <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
           </div>
         </div>
